--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -2,16 +2,7 @@
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+         metadata-complete="false"
          version="4.0">
-    
-    <servlet>
-        <servlet-name>na</servlet-name>
-        <servlet-class>com.yh.web.Nana</servlet-class>
-    </servlet>
 
-    <servlet-mapping>
-        <servlet-name>na</servlet-name>
-        <url-pattern>/hello</url-pattern>
-    </servlet-mapping>
-    
 </web-app>
