--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,4 +5,13 @@
          metadata-complete="false"
          version="4.0">
 
+<!--    <filter>-->
+<!--        <filter-name>characterEncodingFilter</filter-name>-->
+<!--        <filter-class>com.yh.web.filter.CharacterEncodingFilter</filter-class>-->
+<!--    </filter>-->
+<!--    <filter-mapping>-->
+<!--        <filter-name>characterEncodingFilter</filter-name>-->
+<!--        <url-pattern>/*</url-pattern>-->
+<!--    </filter-mapping>-->
+
 </web-app>
